# pretix-wallet

./: .gitignore  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  migration.py  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_wallet/: API.md  apps.py  auth.py  models.py  pagination.py  payment.py  serializers.py  signals.py  urls.py  utils.py  views.py
pretix_wallet/locale/de_Informal/LC_MESSAGES/: django.po
pretix_wallet/migrations/: 0001_initial.py
pretix_wallet/static/pretix_wallet/css/: wallet.css  wallet.scss
pretix_wallet/templates/pretix_wallet/: pairing.html  transaction_list.html  wallet_base.html
pretix_wallet/templatetags/: wallet_tags.py
