[project]
name = "pretix-wallet"
dynamic = ["version"]
description = "A user-based wallet based on pretix giftcards"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Julian Baumann", email = "jeriox@users.noreply.github.com"},
    {name = "Aaron Schlitt", email = "aaron@aaronschlitt.de"},
    {name = "Ben Bals", email = "benbals@posteo.de"},
]
maintainers = [
    {name = "Julian Baumann", email = "jeriox@users.noreply.github.com"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_wallet = "pretix_wallet:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "GitHub repository URL"
repository = "GitHub repository URL"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_wallet.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
